--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
 
     <div style="position: absolute; bottom: 20px; left: 25%; transform: translateX(-5%);">
-      <a href="assets/Rutwik_Guntoorkar_Resume.pdf" download="Rutwik_Guntoorkar_Resume.pdf" 
+      <a href="assets/Rutwik_Guntoorkar.pdf" download="Rutwik_Guntoorkar.pdf" 
          style="text-decoration: none; padding: 10px 20px; background-color: #209fee; color: white; border-radius: 5px; font-size: 14px; display: inline-block; transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;"
          onmouseover="this.style.backgroundColor='white'; this.style.color='#209fee'; this.style.transform='scale(1.3)';" 
          onmouseout="this.style.backgroundColor='#209fee'; this.style.color='white'; this.style.transform='scale(1)';">
